// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixedIncome Transactions component should match snapshot with loading 1`] = `
<ErrorBoundary>
  <div
    data-test="Transactions_Fixed_Income"
  >
    <Hide
      above="md"
      below={null}
    >
      <Mobile
        activePage={1}
        fixedIncomeTransactions={
          Array [
            Object {
              "assetName": "COMPROMISSADA",
              "date": "2016-05-02",
              "grossValue": 87570.15,
              "incomeTax": 0,
              "iof": 0,
              "netValue": 87570.15,
              "type": "COMPRA",
            },
            Object {
              "assetName": "COMPROMISSADA",
              "date": "2016-05-11",
              "grossValue": -87876.11,
              "incomeTax": 68.84,
              "iof": 0,
              "netValue": -87807.27,
              "type": "RESGATE ANTECIPADO",
            },
            Object {
              "assetName": "LCA - Pós",
              "date": "2017-03-02",
              "grossValue": -19984.22,
              "incomeTax": 0,
              "iof": 0,
              "netValue": -19984.22,
              "type": "VENCIMENTO",
            },
          ]
        }
        isEmpty={false}
        loading={true}
        onChangePage={[Function]}
        onFilter={[Function]}
        totalCount={0}
      />
    </Hide>
    <Hide
      above={null}
      below="md"
    >
      <Desktop
        activePage={1}
        fixedIncomeTransactions={
          Array [
            Object {
              "assetName": "COMPROMISSADA",
              "date": "2016-05-02",
              "grossValue": 87570.15,
              "incomeTax": 0,
              "iof": 0,
              "netValue": 87570.15,
              "type": "COMPRA",
            },
            Object {
              "assetName": "COMPROMISSADA",
              "date": "2016-05-11",
              "grossValue": -87876.11,
              "incomeTax": 68.84,
              "iof": 0,
              "netValue": -87807.27,
              "type": "RESGATE ANTECIPADO",
            },
            Object {
              "assetName": "LCA - Pós",
              "date": "2017-03-02",
              "grossValue": -19984.22,
              "incomeTax": 0,
              "iof": 0,
              "netValue": -19984.22,
              "type": "VENCIMENTO",
            },
          ]
        }
        isEmpty={false}
        loading={true}
        onChangePage={[Function]}
        onFilter={[Function]}
        totalCount={0}
      />
    </Hide>
  </div>
</ErrorBoundary>
`;

exports[`FixedIncome Transactions component should match snapshot without fixed Transactions 1`] = `
<ErrorBoundary>
  <div
    data-test="Transactions_Fixed_Income"
  >
    <Hide
      above="md"
      below={null}
    >
      <Mobile
        activePage={1}
        fixedIncomeTransactions={Array []}
        isEmpty={false}
        loading={false}
        onChangePage={[Function]}
        onFilter={[Function]}
        totalCount={0}
      />
    </Hide>
    <Hide
      above={null}
      below="md"
    >
      <Desktop
        activePage={1}
        fixedIncomeTransactions={Array []}
        isEmpty={false}
        loading={false}
        onChangePage={[Function]}
        onFilter={[Function]}
        totalCount={0}
      />
    </Hide>
  </div>
</ErrorBoundary>
`;

exports[`FixedIncome Transactions component should match with fixed Transactions 1`] = `
<ErrorBoundary>
  <div
    data-test="Transactions_Fixed_Income"
  >
    <Hide
      above="md"
      below={null}
    >
      <Mobile
        activePage={1}
        fixedIncomeTransactions={
          Array [
            Object {
              "assetName": "COMPROMISSADA",
              "date": "2016-05-02",
              "grossValue": 87570.15,
              "incomeTax": 0,
              "iof": 0,
              "netValue": 87570.15,
              "type": "COMPRA",
            },
            Object {
              "assetName": "COMPROMISSADA",
              "date": "2016-05-11",
              "grossValue": -87876.11,
              "incomeTax": 68.84,
              "iof": 0,
              "netValue": -87807.27,
              "type": "RESGATE ANTECIPADO",
            },
            Object {
              "assetName": "LCA - Pós",
              "date": "2017-03-02",
              "grossValue": -19984.22,
              "incomeTax": 0,
              "iof": 0,
              "netValue": -19984.22,
              "type": "VENCIMENTO",
            },
          ]
        }
        isEmpty={false}
        onChangePage={[Function]}
        onFilter={[Function]}
        totalCount={0}
      />
    </Hide>
    <Hide
      above={null}
      below="md"
    >
      <Desktop
        activePage={1}
        fixedIncomeTransactions={
          Array [
            Object {
              "assetName": "COMPROMISSADA",
              "date": "2016-05-02",
              "grossValue": 87570.15,
              "incomeTax": 0,
              "iof": 0,
              "netValue": 87570.15,
              "type": "COMPRA",
            },
            Object {
              "assetName": "COMPROMISSADA",
              "date": "2016-05-11",
              "grossValue": -87876.11,
              "incomeTax": 68.84,
              "iof": 0,
              "netValue": -87807.27,
              "type": "RESGATE ANTECIPADO",
            },
            Object {
              "assetName": "LCA - Pós",
              "date": "2017-03-02",
              "grossValue": -19984.22,
              "incomeTax": 0,
              "iof": 0,
              "netValue": -19984.22,
              "type": "VENCIMENTO",
            },
          ]
        }
        isEmpty={false}
        onChangePage={[Function]}
        onFilter={[Function]}
        totalCount={0}
      />
    </Hide>
  </div>
</ErrorBoundary>
`;
